pkg/api/testdata/update-portal/want.edge-ingresses.yaml
apiVersion: hub.traefik.io/v1alpha1
kind: EdgeIngress
metadata:
  name: portal-3118032615-portal
  namespace: agent-ns
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIPortal
      name: portal
  labels:
    app.kubernetes.io/managed-by: traefik-hub
spec:
  service:
    name: dev-portal-service-name
    port: 8080
