pkg/api/testdata/update-portal/want.ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-3118032615-portal-ing
  namespace: agent-ns
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIPortal
      name: portal
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: api-entrypoint
spec:
  ingressClassName: ingress-class
  rules:
    - host: hello.example.com
      http:
        paths:
          - backend:
              service:
                name: dev-portal-service-name
                port:
                  number: 8080
    - host: new.example.com
      http:
        paths:
          - backend:
              service:
                name: dev-portal-service-name
                port:
                  number: 8080

  tls:
    - secretName: todo
      hosts:
        - hello.example.com
        - new.example.com
